--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     "@angular/compiler": "https://next.esm.sh/@angular/compiler@^20.1.6-0?external=rxjs",
     "@angular/platform-browser": "https://next.esm.sh/@angular/platform-browser@^20.1.6-0?external=rxjs",
     "@angular/common": "https://next.esm.sh/@angular/common@^20.1.6-0?external=rxjs",
+    "@angular/common/locales/pt": "https://next.esm.sh/@angular/common@^20.1.6-0/locales/pt.mjs",
     "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm",
     "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs"
   }
