--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     "@angular/common": "https://next.esm.sh/@angular/common@^20.1.6-0?external=rxjs",
     "@angular/common/locales/pt": "https://next.esm.sh/@angular/common@^20.1.6-0/locales/pt.mjs",
     "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm",
-    "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs"
+    "@google/genai": "https://esm.run/@google/genai",
+    "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs",
+    "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop?external=rxjs"
   }
 }
 </script>
