--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "https://next.esm.sh/@angular/platform-browser@^20.1.6-0?external=rxjs",
     "@angular/common": "https://next.esm.sh/@angular/common@^20.1.6-0?external=rxjs",
     "@angular/common/locales/pt": "https://next.esm.sh/@angular/common@^20.1.6-0/locales/pt.mjs",
+    "@angular/forms": "https://next.esm.sh/@angular/forms@^20.1.6-0?external=rxjs",
     "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm",
     "@google/genai": "https://esm.run/@google/genai",
     "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs",
