feat: Integrate Gemini API key from environment variables
Moves the Gemini API key from being hardcoded to being loaded from environment variables.
This change also includes a polyfill for the `process` object in the browser to ensure compatibility when environment variables are not injected.
The configuration logic in `environment.ts` is updated to read and validate the `API_KEY` for the Gemini API.
This ensures better security and flexibility in managing API keys across different deployment environments.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       background: #6b7280; /* bg-gray-500 */
     }
   </style>
+<script>
+  // Polyfill `process` for browser environment to avoid crashing the app
+  // when it tries to access environment variables. This allows for graceful
+  // error handling if the variables are not injected by the deployment platform.
+  if (typeof window.process === 'undefined') {
+    window.process = { env: {} };
+  }
+</script>
 <script type="importmap">
 {
   "imports": {
