--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
     "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm",
     "@google/genai": "https://esm.run/@google/genai",
     "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs",
-    "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop.mjs?external=rxjs",
-    "@angular/core/rxjs/interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs/interop?external=rxjs"
+    "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop.mjs?external=rxjs"
   }
 }
 </script>
