feat: Improve navigation and styling
Introduce a class to hide scrollbars for a cleaner look on specific elements. Refactor the bottom navigation component to simplify logic and improve rendering. The primary and secondary navigation items are now directly derived from `availableNavItems` without intermediate computed properties, making the structure more straightforward.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     ::-webkit-scrollbar-thumb:hover {
       background: #6b7280; /* bg-gray-500 */
     }
+
+    /* Hide scrollbar for elements with this class */
+    .hide-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+    .hide-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+    }
     
     /* Print styles */
     @media print {
