feat(notifications): integrate Howler.js for sound
Switches from native Audio API to Howler.js for sound notifications. This change standardizes sound playback, improves reliability, and enables better control over audio. The Howler.js library is included via CDN.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Gestão de Restaurantes</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
   <style>
     /* Custom scrollbar for a more modern look */
     ::-webkit-scrollbar {
