--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Sistema de Gestão de Restaurantes</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     /* Custom scrollbar for a more modern look */
     ::-webkit-scrollbar {
