feat: Add iFood integration types and dependencies
Introduces new types for iFood order statuses and order details to facilitate integration with the iFood platform.

Also adds necessary dependencies (`crypto`, `@vercel/node`) and updates CDN imports for these modules in the `index.html`.

The KDS component has been updated to display iFood orders and handle their specific display logic. The inventory component also receives a minor fix related to type casting for field names.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
     "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm",
     "@google/genai": "https://esm.run/@google/genai",
     "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs",
-    "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop.mjs?external=rxjs"
+    "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop.mjs?external=rxjs",
+    "crypto": "https://next.esm.sh/crypto@^1.0.1?external=rxjs",
+    "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs"
   }
 }
 </script>
