feat: Add iFood integration and improve KDS
Integrates iFood order management and enhances the Kitchen Display System (KDS). This includes:
- Adding the `IfoodDataService` and updating KDS component to display iFood orders.
- Modifying `package.json` and `index.html` to include the `buffer` dependency for webhook processing.
- Fixing type errors in `db-helpers.ts` and ensuring `Buffer` is available in webhook utilities.
- Improving KDS ticket tracking by using `orderId` as the unique identifier.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
     "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs",
     "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop.mjs?external=rxjs",
     "crypto": "https://next.esm.sh/crypto@^1.0.1?external=rxjs",
-    "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs"
+    "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs",
+    "buffer": "https://next.esm.sh/buffer@^6.0.3?external=rxjs"
   }
 }
 </script>
