--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
     "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop.mjs?external=rxjs",
     "crypto": "https://next.esm.sh/crypto@^1.0.1?external=rxjs",
     "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs",
-    "buffer": "https://next.esm.sh/buffer@^6.0.3?external=rxjs"
+    "buffer": "https://next.esm.sh/buffer@^6.0.3?external=rxjs",
+    "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.2.5/drag-drop?external=rxjs"
   }
 }
 </script>
