--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     "@google/genai": "https://esm.run/@google/genai",
     "uuid": "https://next.esm.sh/uuid@^11.1.0?external=rxjs",
     "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.1.6-0/rxjs-interop.mjs?external=rxjs",
-    "crypto": "https://esm.sh/crypto-browserify@3.12.0",
+    "crypto-browserify": "https://esm.sh/crypto-browserify@3.12.0",
     "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs",
     "buffer": "https://esm.sh/buffer@6.0.3",
     "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.2.5/drag-drop?external=rxjs"
