--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     "crypto-browserify": "https://esm.sh/crypto-browserify@3.12.0",
     "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs",
     "buffer": "https://esm.sh/buffer@6.0.3",
-    "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.1.6-0/drag-drop?external=rxjs"
+    "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.1.6-0/drag-drop.mjs?external=rxjs"
   }
 }
 </script>
