--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     "crypto": "https://next.esm.sh/crypto@^1.0.1?external=rxjs",
     "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs",
     "buffer": "https://next.esm.sh/buffer@^6.0.3?external=rxjs",
-    "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.2.5/drag-drop?external=rxjs"
+    "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.2.5/drag-drop?external=rxjs",
+    "crypto-browserify": "https://next.esm.sh/crypto-browserify@^3.12.1?external=rxjs"
   }
 }
 </script>
