--- a/index.html
+++ b/index.html
@@ -1,28 +1,65 @@
-<script type="importmap">
-{
-  "imports": {
-    "rxjs": "https://aistudiocdn.com/rxjs@^7.8.2?conditions=es2015",
-    "rxjs/operators": "https://aistudiocdn.com/rxjs@^7.8.2/operators?conditions=es2015",
-    "rxjs/ajax": "https://aistudiocdn.com/rxjs@^7.8.2/ajax?conditions=es2015",
-    "rxjs/webSocket": "https://aistudiocdn.com/rxjs@^7.8.2/webSocket?conditions=es2015",
-    "rxjs/testing": "https://aistudiocdn.com/rxjs@^7.8.2/testing?conditions=es2015",
-    "rxjs/fetch": "https://aistudiocdn.com/rxjs@^7.8.2/fetch?conditions=es2015",
-    "@angular/core": "https://next.esm.sh/@angular/core@^20.3.10?external=rxjs",
-    "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.3.10/rxjs-interop?external=rxjs",
-    "@google/genai": "https://next.esm.sh/@google/genai@^1.29.0?external=rxjs",
-    "buffer": "https://next.esm.sh/buffer@^6.0.3?external=rxjs",
-    "uuid": "https://next.esm.sh/uuid@^13.0.0?external=rxjs",
-    "crypto": "https://next.esm.sh/crypto@^1.0.1?external=rxjs",
-    "@angular/platform-browser": "https://next.esm.sh/@angular/platform-browser@^20.3.10?external=rxjs",
-    "@angular/router": "https://next.esm.sh/@angular/router@^20.3.10?external=rxjs",
-    "@supabase/supabase-js": "https://next.esm.sh/@supabase/supabase-js@^2.80.0?external=rxjs",
-    "@angular/common/locales/pt": "https://next.esm.sh/@angular/common@^20.3.10/locales/pt?external=rxjs",
-    "@angular/common": "https://next.esm.sh/@angular/common@^20.3.10?external=rxjs",
-    "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.2.12/drag-drop?external=rxjs",
-    "crypto-browserify": "https://next.esm.sh/crypto-browserify@^3.12.1?external=rxjs",
-    "@vercel/node": "https://next.esm.sh/@vercel/node@^5.5.5?external=rxjs",
-    "@angular/forms": "https://next.esm.sh/@angular/forms@^20.3.10?external=rxjs"
+<!doctype html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8">
+  <title>ChefOS - Sistema de Gestão para Restaurantes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Google Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <!-- Leaflet.js for Maps -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+  
+  <!-- Howler.js for Sound -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
+  
+  <!-- D3.js for Charts -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+
+  <style>
+    body { font-family: 'Inter', sans-serif; background-color: #111827; }
+    .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24 }
+  </style>
+
+  <!-- Import Map -->
+  <script type="importmap">
+  {
+    "imports": {
+      "rxjs": "https://aistudiocdn.com/rxjs@^7.8.2?conditions=es2015",
+      "rxjs/operators": "https://aistudiocdn.com/rxjs@^7.8.2/operators?conditions=es2015",
+      "rxjs/ajax": "https://aistudiocdn.com/rxjs@^7.8.2/ajax?conditions=es2015",
+      "rxjs/webSocket": "https://aistudiocdn.com/rxjs@^7.8.2/webSocket?conditions=es2015",
+      "rxjs/testing": "https://aistudiocdn.com/rxjs@^7.8.2/testing?conditions=es2015",
+      "rxjs/fetch": "https://aistudiocdn.com/rxjs@^7.8.2/fetch?conditions=es2015",
+      "@angular/core": "https://next.esm.sh/@angular/core@^20.3.10?external=rxjs",
+      "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.3.10/rxjs-interop?external=rxjs",
+      "@google/genai": "https://next.esm.sh/@google/genai@^1.29.0?external=rxjs",
+      "buffer": "https://next.esm.sh/buffer@^6.0.3?external=rxjs",
+      "uuid": "https://next.esm.sh/uuid@^13.0.0?external=rxjs",
+      "crypto": "https://next.esm.sh/crypto@^1.0.1?external=rxjs",
+      "@angular/platform-browser": "https://next.esm.sh/@angular/platform-browser@^20.3.10?external=rxjs",
+      "@angular/router": "https://next.esm.sh/@angular/router@^20.3.10?external=rxjs",
+      "@supabase/supabase-js": "https://next.esm.sh/@supabase/supabase-js@^2.80.0?external=rxjs",
+      "@angular/common/locales/pt": "https://next.esm.sh/@angular/common@^20.3.10/locales/pt?external=rxjs",
+      "@angular/common": "https://next.esm.sh/@angular/common@^20.3.10?external=rxjs",
+      "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.2.12/drag-drop?external=rxjs",
+      "crypto-browserify": "https://next.esm.sh/crypto-browserify@^3.12.1?external=rxjs",
+      "@vercel/node": "https://next.esm.sh/@vercel/node@^5.5.5?external=rxjs",
+      "@angular/forms": "https://next.esm.sh/@angular/forms@^20.3.10?external=rxjs"
+    }
   }
-}
-</script>
-full contents of index.html
+  </script>
+</head>
+<body>
+  <app-root></app-root>
+  <script type="module" src="index.tsx"></script>
+</body>
+</html>
