--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Gestão de Restaurantes</title>
+  <link rel="icon" type="image/x-icon" href="https://chefos.koresolucoes.com.br/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -143,12 +144,10 @@
     "@vercel/node": "https://next.esm.sh/@vercel/node@^5.3.22?external=rxjs",
     "buffer": "https://next.esm.sh/buffer@^6.0.3?external=rxjs",
     "@angular/cdk/drag-drop": "https://next.esm.sh/@angular/cdk@^20.2.5/drag-drop?external=rxjs",
-    "crypto-browserify": "https://next.esm.sh/crypto-browserify@^3.12.1?external=rxjs",
-    "@angular/core/rxjs/interop": "https://next.esm.sh/@angular/core@^20.3.10/rxjs/interop?external=rxjs"
+    "crypto-browserify": "https://next.esm.sh/crypto-browserify@^3.12.1?external=rxjs"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-900 text-gray-100 antialiased">
   <app-root></app-root>
