--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Gestão de Restaurantes</title>
-  <link rel="icon" type="image/x-icon" href="https://chefos.koresolucoes.com.br/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://chefos.shop/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
