refactor: Update website links to new domain
This commit updates all occurrences of the old website domain "chefos.shop" to the new domain "app.chefos.online" across the application. This includes:

- README.md
- Authentication components (employee-selection, login)
- Demo access component
- Menu component
- Public booking component

The change ensures that users are directed to the correct platform for signing up, logging in, and accessing the application.

Additionally, minor styling adjustments were made to the public menu and public booking components to improve the visual presentation, including:
- Updated background colors and loading indicators.
- Enhanced image transition effects on the public booking page.

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema de Gestão de Restaurantes</title>
-  <link rel="icon" type="image/x-icon" href="https://chefos.koresolucoes.com.br/favicon.ico">
+  <title>ChefOS - Gestão de Restaurantes</title>
+  <link rel="icon" type="image/x-icon" href="https://app.chefos.online/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
