--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-900 text-gray-100 antialiased">
   <app-root></app-root>
